# VideoCut

./: .README.md.swp  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
internal/: config.py  depends.py  main.py
internal/assets/: bumer.srt
internal/assets/subtitles/json/: bumer.json  lotr1.json
internal/schemas/: subtitle.py  video.py
internal/services/: subtitles.py  utils.py  video.py
