[project]
name = "videocut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "rapidfuzz>=3.12.2",
    "ruff>=0.11.0",
    "srt>=3.5.3",
    "uvicorn>=0.34.0",
]
[tool.ruff]
# Set the maximum line length to 79.
line-length = 140

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
